<resources>
    <string name="app_name">Challenge1</string>
    <string name="about">About</string>
    <string name="my_profile">My Profile</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="hady_walied">Hady Walied</string>
    <string name="track_android">Track: Android</string>
    <string name="country_egypt">Country: Egypt</string>
    <string name="email_my_mepharo1230_gmail_com">Email: my.mepharo1230@gmail.com</string>
    <string name="_201224698687">phone: +201224698687</string>
    <string name="slack_hadywalied">Slack: @hadywalied</string>
</resources>
