<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main3Activity">

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/horizontalCenterGuideline"
                                                app:layout_constraintGuide_percent=".5"
                                                android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/horizontalUpperGuideline"
                                                app:layout_constraintGuide_percent=".35"
                                                android:orientation="horizontal"/>

    <ImageView android:layout_width="250dp" android:layout_height="250dp"
               android:id="@+id/mypic"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintBottom_toBottomOf="@id/horizontalUpperGuideline"
               android:scaleType="centerCrop"
    />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/horizontalUpperGuideline"
              app:layout_constraintBottom_toTopOf="@id/horizontalCenterGuideline"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              android:text="@string/hady_walied"
              style="@style/MainText"/>


    <View android:layout_width="match_parent" android:layout_height="4dp"
          app:layout_constraintTop_toBottomOf="@id/horizontalCenterGuideline"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintVertical_bias=".05"
          android:background="@color/colorPrimary"
          android:layout_margin="8dp"
          app:layout_constraintCircleRadius="4dp"
    />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/subText"
              android:id="@+id/track"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toBottomOf="@id/horizontalCenterGuideline"
              app:layout_constraintBottom_toBottomOf="parent"
              android:text="@string/track_android"
              app:layout_constraintVertical_bias=".1"
              app:layout_constraintHorizontal_bias=".1"
    />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/country"
              style="@style/subText"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toBottomOf="@id/track"
              app:layout_constraintBottom_toBottomOf="parent"
              android:text="@string/country_egypt"
              app:layout_constraintVertical_bias=".1"
              app:layout_constraintHorizontal_bias=".1"
    />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/subText"
              android:id="@+id/email"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/country"
              app:layout_constraintBottom_toBottomOf="parent"
              android:text="@string/email_my_mepharo1230_gmail_com"
              app:layout_constraintVertical_bias=".1"
              app:layout_constraintHorizontal_bias=".1"
    />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/subText"
              android:id="@+id/phone"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toBottomOf="@id/email"
              app:layout_constraintBottom_toBottomOf="parent"
              android:text="@string/_201224698687"
              app:layout_constraintVertical_bias=".1"
              app:layout_constraintHorizontal_bias=".1"
    />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              style="@style/subText"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toBottomOf="@id/phone"
              app:layout_constraintBottom_toBottomOf="parent"
              android:text="@string/slack_hadywalied"
              app:layout_constraintVertical_bias=".1"
              app:layout_constraintHorizontal_bias=".1"
    />

</androidx.constraintlayout.widget.ConstraintLayout>