<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_alc_4_0"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/MainText"/>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/guideline1"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_percent=".5"
            android:orientation="vertical"/>
    <Button
            android:text="@string/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/About"
            app:layout_constraintTop_toBottomOf="@id/guideline1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorAccent"
            style="@style/MainText"
            android:textSize="16sp"
    />
    <Button
            android:text="@string/my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Profile"
            app:layout_constraintTop_toBottomOf="@id/guideline1"
            app:layout_constraintLeft_toRightOf="@id/guideline2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorAccent"
            style="@style/MainText"
            android:textSize="16sp"

    />

</androidx.constraintlayout.widget.ConstraintLayout>